Fix menu z-index and current menu item

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -26,10 +26,21 @@
       }
     }
   }
+
+  > .current_page_parent > a,
+  > .current_page_parent > a:hover,
+  > .current-menu-item > a,
+  > .current-menu-item > a:hover {
+    color: $color-white;
+    border-radius: $border-radius-std;
+    background-color: $color-red;
+    box-shadow: $shadow-std;
+  }
 }
+
 .sub-menu {
   position: absolute;
-  z-index: 1;
+  z-index: 999;
   left: 50%;
 
   display: none;
@@ -53,14 +64,10 @@
   line-height: 42px;
 }
 
-.current_page_parent > a,
-.current_page_parent > a:hover,
-.current-menu-item > a,
-.current-menu-item > a:hover {
-  color: $color-white;
-  border-radius: $border-radius-std;
-  background-color: $color-red;
-  box-shadow: $shadow-std;
+.menu-item {
+  white-space: nowrap;
+  display: flex;
+  align-items: center;
 }
 
 .bc {
@@ -86,6 +93,7 @@
     padding: 0 5px;
   }
 }
+
 .qtranxs-lang-menu {
   border-radius: $border-radius-std;
   background: rgba($color-black, .5);
